# bot-brain

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/core/: database.py
app/models/: client.py  schemas.py
app/services/: ai.py  audio.py  sanity.py  telegram.py  whatsapp.py
